crates/boltlang-parser/tests/snapshots/parser__test__a_string_is_some_text_wrapped_in_two_double_quotes.snap
---
source: crates/boltlang-parser/tests/parser.rs
expression: "& stringify(node, diags)"
---
- LIT_EXPR
- - STRING
  - '"foobar"'
