crates/boltlang-parser/tests/snapshots/parser__test__a_string_is_some_text_wrapped_in_two_double_quotes_missing_right_quote.snap
---
source: crates/boltlang-parser/tests/parser.rs
expression: "&output(\"\\\"foobar\", parse_expr)"
---
- LIT_EXPR
- - STRING
  - '"foobar'
---
!UnexpectedChar
message: expected '"' to delimit the string literal but found end-of-file
span:
  start: 6
  end: 7
