crates/boltlang-parser/tests/snapshots/parser__test__a_string_may_contain_spaces.snap
---
source: crates/boltlang-parser/tests/parser.rs
expression: "& stringify(node, diags)"
---
- LIT_EXPR
- - STRING
  - '"Hello, world!"'
