crates/boltlang-parser/tests/snapshots/parser__test__a_string_may_contain_spaces_1.snap
---
source: crates/boltlang-parser/tests/parser.rs
expression: "& stringify(node, diags)"
---
- LIT_EXPR
- - BIN_INT
  - '0b1100110'
