crates/boltlang-parser/tests/snapshots/parser__test__a_string_may_contain_spaces_2.snap
---
source: crates/boltlang-parser/tests/parser.rs
expression: "& stringify(node, diags)"
---
- LIT_EXPR
- - OCT_INT
  - '0o73651'
