crates/boltlang-parser/tests/snapshots/parser__test__digits_are_valid_numbers_1.snap
---
source: crates/boltlang-parser/tests/parser.rs
expression: "& stringify(node, diags)"
---
- LIT_EXPR
- - DEC_INT
  - '2'
