crates/boltlang-parser/tests/snapshots/parser__test__digits_are_valid_numbers_5.snap
---
source: crates/boltlang-parser/tests/parser.rs
expression: "& stringify(node, diags)"
---
- LIT_EXPR
- - HEX_INT
  - '0xffab23'
