crates/boltlang-parser/tests/snapshots/parser__test__the_empty_string_is_a_valid_string.snap
---
source: crates/boltlang-parser/tests/parser.rs
expression: "& stringify(node, diags)"
---
- LIT_EXPR
- - STRING
  - '""'
